--- a/mltehranipour/middle course/logistic regression/Mini Project 2 - Regression (Bike Sharing Demand)/Mini Project 2.ipynb
+++ b/mltehranipour/middle course/logistic regression/Mini Project 2 - Regression (Bike Sharing Demand)/Mini Project 2.ipynb
@@ -33,10 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import sklearn"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train = pd.read_csv('train.csv')\n",
+    "test = pd.read_csv('test.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +71,294 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>season</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weather</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>casual</th>\n",
+       "      <th>registered</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10621</th>\n",
+       "      <td>2012-12-08 23:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16.40</td>\n",
+       "      <td>20.455</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>18</td>\n",
+       "      <td>144</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1835</th>\n",
+       "      <td>2011-05-03 09:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>24.60</td>\n",
+       "      <td>28.790</td>\n",
+       "      <td>78</td>\n",
+       "      <td>23.9994</td>\n",
+       "      <td>29</td>\n",
+       "      <td>157</td>\n",
+       "      <td>186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9813</th>\n",
+       "      <td>2012-10-13 06:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.30</td>\n",
+       "      <td>14.395</td>\n",
+       "      <td>61</td>\n",
+       "      <td>12.9980</td>\n",
+       "      <td>5</td>\n",
+       "      <td>23</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2067</th>\n",
+       "      <td>2011-05-13 01:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.32</td>\n",
+       "      <td>25.000</td>\n",
+       "      <td>83</td>\n",
+       "      <td>11.0014</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10288</th>\n",
+       "      <td>2012-11-14 02:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.84</td>\n",
+       "      <td>10.605</td>\n",
+       "      <td>60</td>\n",
+       "      <td>19.9995</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  datetime  season  holiday  workingday  weather   temp  \\\n",
+       "10621  2012-12-08 23:00:00       4        0           0        2  16.40   \n",
+       "1835   2011-05-03 09:00:00       2        0           1        2  24.60   \n",
+       "9813   2012-10-13 06:00:00       4        0           0        1  12.30   \n",
+       "2067   2011-05-13 01:00:00       2        0           1        1  21.32   \n",
+       "10288  2012-11-14 02:00:00       4        0           1        1   9.84   \n",
+       "\n",
+       "        atemp  humidity  windspeed  casual  registered  count  \n",
+       "10621  20.455        94     0.0000      18         144    162  \n",
+       "1835   28.790        78    23.9994      29         157    186  \n",
+       "9813   14.395        61    12.9980       5          23     28  \n",
+       "2067   25.000        83    11.0014       5          15     20  \n",
+       "10288  10.605        60    19.9995       0           1      1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>season</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weather</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>windspeed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6094</th>\n",
+       "      <td>2012-11-26 06:00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.02</td>\n",
+       "      <td>13.635</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1635</th>\n",
+       "      <td>2011-07-23 03:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31.98</td>\n",
+       "      <td>37.880</td>\n",
+       "      <td>66</td>\n",
+       "      <td>6.0032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5083</th>\n",
+       "      <td>2012-07-29 15:00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32.80</td>\n",
+       "      <td>36.365</td>\n",
+       "      <td>43</td>\n",
+       "      <td>8.9981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>2011-06-20 00:00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.06</td>\n",
+       "      <td>30.305</td>\n",
+       "      <td>83</td>\n",
+       "      <td>11.0014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3322</th>\n",
+       "      <td>2012-01-24 03:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.12</td>\n",
+       "      <td>16.665</td>\n",
+       "      <td>93</td>\n",
+       "      <td>8.9981</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 datetime  season  holiday  workingday  weather   temp  \\\n",
+       "6094  2012-11-26 06:00:00       4        0           1        1   9.02   \n",
+       "1635  2011-07-23 03:00:00       3        0           0        1  31.98   \n",
+       "5083  2012-07-29 15:00:00       3        0           0        1  32.80   \n",
+       "1296  2011-06-20 00:00:00       2        0           1        1  27.06   \n",
+       "3322  2012-01-24 03:00:00       1        0           1        2  13.12   \n",
+       "\n",
+       "       atemp  humidity  windspeed  \n",
+       "6094  13.635        69     0.0000  \n",
+       "1635  37.880        66     6.0032  \n",
+       "5083  36.365        43     8.9981  \n",
+       "1296  30.305        83    11.0014  \n",
+       "3322  16.665        93     8.9981  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape train : (10886, 12)\n",
+      "shape test :  (6493, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('shape train :', train.shape)\n",
+    "print('shape test : ', test.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
