--- a/algorithms datascience/hw01/hw03.ipynb
+++ b/algorithms datascience/hw01/hw03.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.8 Tutorial: Computing Similarity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
