--- a/algorithms datascience/hw05/hw05.ipynb
+++ b/algorithms datascience/hw05/hw05.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.6 Tutorial: Histogram Construction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 109,
    "metadata": {},
