--- a/algorithms datascience/hw01/hw02-plot.ipynb
+++ b/algorithms datascience/hw01/hw02-plot.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "کد های کتاب"
+    "# 2.6 Tutorial: Election Cycle Contributions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "R book codes"
    ]
   },
   {
