--- a/algorithms datascience/hw01/hw02.ipynb
+++ b/algorithms datascience/hw01/hw02.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2.6 Tutorial: Election Cycle Contributions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
