--- a/algorithms datascience/hw04/hw04.ipynb
+++ b/algorithms datascience/hw04/hw04.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 2.10 Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2.2.b"
    ]
   },
