--- a/advance db/final/code.ipynb
+++ b/advance db/final/code.ipynb
@@ -488,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LOAD_DATA = True\n",
+    "LOAD_DATA = False\n",
     "\n",
     "def run_request(request,LOAD_DATA=False):\n",
     "    if (LOAD_DATA):\n",
