--- a/machine learning/final/code.ipynb
+++ b/machine learning/final/code.ipynb
@@ -1553,11 +1553,213 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# WQI\n",
+    "  تنظیم هایپرپارامترها با Grid Search"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neural_network import MLPRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# مدل‌ها و پارامترهای مربوطه\n",
+    "param_grids = {\n",
+    "    \"KNN\": {\n",
+    "        \"model\": KNeighborsRegressor(),\n",
+    "        \"params\": {\"n_neighbors\": list(range(1, 51)), \"weights\": ['uniform', 'distance']}\n",
+    "    },\n",
+    "    \"DecisionTree\": {\n",
+    "        \"model\": DecisionTreeRegressor(),\n",
+    "        \"params\": {\"max_depth\": list(range(1, 31)), \"random_state\": list(range(1, 51))}\n",
+    "    },\n",
+    "    \"SVR\": {\n",
+    "        \"model\": SVR(),\n",
+    "        \"params\": {\"C\": [1, 2, 3, 4, 5], \"epsilon\": [0.1, 0.01, 0.001], \"kernel\": ['sigmoid', 'poly', 'linear', 'rbf']}\n",
+    "    },\n",
+    "    \"MLP\": {\n",
+    "        \"model\": MLPRegressor(max_iter=1000),\n",
+    "        \"params\": {\"activation\": ['relu', 'tanh', 'logistic'], \"solver\": ['sgd', 'lbfgs', 'adam'], \"alpha\": [0.01, 0.001, 0.0001]}\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "results = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, median_absolute_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing KNN...\n",
+      "Processing DecisionTree...\n",
+      "Processing SVR...\n",
+      "Processing MLP...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pouya\\anaconda3\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:545: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# جستجوی بهترین پارامترها و ارزیابی مدل‌ها\n",
+    "best_models = {}\n",
+    "for model_name, config in param_grids.items():\n",
+    "    print(f\"Processing {model_name}...\")\n",
+    "    grid_search = GridSearchCV(config[\"model\"], config[\"params\"], cv=5, scoring='r2', n_jobs=-1)\n",
+    "    grid_search.fit(X_train, Y_wqi_train)\n",
+    "    \n",
+    "    best_model = grid_search.best_estimator_\n",
+    "    best_models[model_name] = best_model\n",
+    "    Y_pred = best_model.predict(X_test)\n",
+    "    \n",
+    "    metrics = {\n",
+    "        \"Model\": model_name,\n",
+    "        \"Best Params\": grid_search.best_params_,\n",
+    "        \"MAE\": mean_absolute_error(Y_wqi_test, Y_pred),\n",
+    "        \"MSE\": mean_squared_error(Y_wqi_test, Y_pred),\n",
+    "        \"MedAE\": median_absolute_error(Y_wqi_test, Y_pred),\n",
+    "        \"R2 Score\": r2_score(Y_wqi_test, Y_pred)\n",
+    "    }\n",
+    "    results.append(metrics)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Best Params</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>MedAE</th>\n",
+       "      <th>R2 Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>{'n_neighbors': 3, 'weights': 'distance'}</td>\n",
+       "      <td>9.878936</td>\n",
+       "      <td>348.292049</td>\n",
+       "      <td>5.340391</td>\n",
+       "      <td>0.536811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DecisionTree</td>\n",
+       "      <td>{'max_depth': 12, 'random_state': 6}</td>\n",
+       "      <td>2.768349</td>\n",
+       "      <td>14.614719</td>\n",
+       "      <td>2.038371</td>\n",
+       "      <td>0.980564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SVR</td>\n",
+       "      <td>{'C': 5, 'epsilon': 0.001, 'kernel': 'rbf'}</td>\n",
+       "      <td>16.024944</td>\n",
+       "      <td>721.607053</td>\n",
+       "      <td>11.447223</td>\n",
+       "      <td>0.040345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MLP</td>\n",
+       "      <td>{'activation': 'tanh', 'alpha': 0.001, 'solver...</td>\n",
+       "      <td>7.625420</td>\n",
+       "      <td>136.623066</td>\n",
+       "      <td>5.655359</td>\n",
+       "      <td>0.818307</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Model                                        Best Params        MAE  \\\n",
+       "0           KNN          {'n_neighbors': 3, 'weights': 'distance'}   9.878936   \n",
+       "1  DecisionTree               {'max_depth': 12, 'random_state': 6}   2.768349   \n",
+       "2           SVR        {'C': 5, 'epsilon': 0.001, 'kernel': 'rbf'}  16.024944   \n",
+       "3           MLP  {'activation': 'tanh', 'alpha': 0.001, 'solver...   7.625420   \n",
+       "\n",
+       "          MSE      MedAE  R2 Score  \n",
+       "0  348.292049   5.340391  0.536811  \n",
+       "1   14.614719   2.038371  0.980564  \n",
+       "2  721.607053  11.447223  0.040345  \n",
+       "3  136.623066   5.655359  0.818307  "
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# نمایش جدول نتایج\n",
+    "results_df = pd.DataFrame(results)\n",
+    "results_df"
+   ]
   }
  ],
  "metadata": {
