--- a/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
+++ b/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
@@ -63,6 +63,90 @@
     "import requests\n",
     "import pickle"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81f592f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualization Settings\n",
+    "sns.set(style=\"whitegrid\")\n",
+    "plt.rcParams[\"figure.figsize\"] = (10, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5069427e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reproducibility: Set random seed for consistent results\n",
+    "SEED = 42\n",
+    "def set_seed(seed=SEED):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    torch.manual_seed(seed)\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.manual_seed_all(seed)\n",
+    "\n",
+    "set_seed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97d024f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Device Setup: Enable GPU if available\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dbc51f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: Display CUDA device information\n",
+    "if device.type == \"cuda\":\n",
+    "    print(f\"CUDA Device Name: {torch.cuda.get_device_name(0)}\")\n",
+    "    print(f\"CUDA Device Count: {torch.cuda.device_count()}\")\n",
+    "    print(f\"CUDA Available: {torch.cuda.is_available()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d499f52d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utility function to check memory usage (if needed during training)\n",
+    "def print_memory_usage():\n",
+    "    if device.type == \"cuda\":\n",
+    "        allocated = torch.cuda.memory_allocated() / 1024**2\n",
+    "        reserved = torch.cuda.memory_reserved() / 1024**2\n",
+    "        print(f\"Memory Allocated: {allocated:.2f} MB\")\n",
+    "        print(f\"Memory Reserved: {reserved:.2f} MB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08d1ad39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Confirming imports and environment setup\n",
+    "print(\"Basic imports and device setup complete.\")"
+   ]
   }
  ],
  "metadata": {
