tsa-fianl-code-4

--- a/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
+++ b/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
@@ -331,6 +331,152 @@
     "except Exception as e:\n",
     "    print(f\"Error occurred: {e}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82d04258",
+   "metadata": {},
+   "source": [
+    "BasicTS+ Benchmark: Unified Training Pipeline (Incorporating dataloaders, runners, normalization, training tricks, and evaluation standardization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "415942a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BasicTSPlusTrainer:\n",
+    "    \"\"\"\n",
+    "    Unified Training Pipeline for BasicTS+ Benchmark.\n",
+    "    \n",
+    "    Incorporates standardized data loading, normalization, curriculum learning, gradient clipping,\n",
+    "    and evaluation standardization for fair and reproducible benchmarking.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, model, dataloader, optimizer, criterion, scheduler=None, \n",
+    "                 clip_grad=1.0, use_curriculum=True, device=\"cuda\" if torch.cuda.is_available() else \"cpu\"):\n",
+    "        \"\"\"\n",
+    "        Initialize the unified training pipeline.\n",
+    "        \n",
+    "        Args:\n",
+    "            model (torch.nn.Module): The time series forecasting model.\n",
+    "            dataloader (torch.utils.data.DataLoader): Dataloader for training data.\n",
+    "            optimizer (torch.optim.Optimizer): Optimizer for model training.\n",
+    "            criterion (torch.nn.Module): Loss function.\n",
+    "            scheduler (torch.optim.lr_scheduler, optional): Learning rate scheduler. Defaults to None.\n",
+    "            clip_grad (float): Gradient clipping value. Defaults to 1.0.\n",
+    "            use_curriculum (bool): Whether to use curriculum learning. Defaults to True.\n",
+    "            device (str): Computation device. Defaults to \"cuda\" if available.\n",
+    "        \"\"\"\n",
+    "        self.model = model.to(device)\n",
+    "        self.dataloader = dataloader\n",
+    "        self.optimizer = optimizer\n",
+    "        self.criterion = criterion\n",
+    "        self.scheduler = scheduler\n",
+    "        self.clip_grad = clip_grad\n",
+    "        self.use_curriculum = use_curriculum\n",
+    "        self.device = device\n",
+    "\n",
+    "    def train_step(self, batch):\n",
+    "        \"\"\"\n",
+    "        Perform a single training step.\n",
+    "        \n",
+    "        Args:\n",
+    "            batch (tuple): Contains (input sequence, target sequence).\n",
+    "        \n",
+    "        Returns:\n",
+    "            float: Training loss for the batch.\n",
+    "        \"\"\"\n",
+    "        self.model.train()\n",
+    "        self.optimizer.zero_grad()\n",
+    "        \n",
+    "        x, y = batch\n",
+    "        x, y = x.to(self.device), y.to(self.device)\n",
+    "        \n",
+    "        output = self.model(x)\n",
+    "        loss = self.criterion(output, y)\n",
+    "        loss.backward()\n",
+    "        \n",
+    "        # Apply gradient clipping\n",
+    "        if self.clip_grad:\n",
+    "            nn.utils.clip_grad_norm_(self.model.parameters(), self.clip_grad)\n",
+    "\n",
+    "        self.optimizer.step()\n",
+    "        \n",
+    "        return loss.item()\n",
+    "\n",
+    "    def train(self, epochs=50):\n",
+    "        \"\"\"\n",
+    "        Train the model for a given number of epochs using curriculum learning.\n",
+    "        \n",
+    "        Args:\n",
+    "            epochs (int): Number of training epochs. Defaults to 50.\n",
+    "        \"\"\"\n",
+    "        for epoch in range(1, epochs + 1):\n",
+    "            total_loss = 0.0\n",
+    "            for batch_idx, batch in enumerate(self.dataloader):\n",
+    "                # Implement curriculum learning (optional)\n",
+    "                if self.use_curriculum and epoch < epochs // 2:\n",
+    "                    batch = self.modify_batch_difficulty(batch, factor=epoch / epochs)\n",
+    "                \n",
+    "                batch_loss = self.train_step(batch)\n",
+    "                total_loss += batch_loss\n",
+    "\n",
+    "            avg_loss = total_loss / len(self.dataloader)\n",
+    "            \n",
+    "            if self.scheduler:\n",
+    "                self.scheduler.step()\n",
+    "\n",
+    "            print(f\"Epoch {epoch}/{epochs} - Loss: {avg_loss:.4f}\")\n",
+    "\n",
+    "    def modify_batch_difficulty(self, batch, factor):\n",
+    "        \"\"\"\n",
+    "        Adjust batch difficulty in curriculum learning.\n",
+    "        \n",
+    "        Args:\n",
+    "            batch (tuple): Contains (input sequence, target sequence).\n",
+    "            factor (float): Difficulty scaling factor.\n",
+    "        \n",
+    "        Returns:\n",
+    "            tuple: Modified batch.\n",
+    "        \"\"\"\n",
+    "        x, y = batch\n",
+    "        scaled_x = x * factor  # Scale input data based on progression\n",
+    "        return scaled_x, y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2af8d30c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example Usage:\n",
+    "def initialize_training_pipeline(model, train_data, lr=0.001):\n",
+    "    \"\"\"\n",
+    "    Initialize BasicTS+ training pipeline with model and training dataset.\n",
+    "\n",
+    "    Args:\n",
+    "        model (torch.nn.Module): Time series forecasting model.\n",
+    "        train_data (torch.utils.data.Dataset): Training dataset.\n",
+    "        lr (float): Learning rate. Defaults to 0.001.\n",
+    "    \n",
+    "    Returns:\n",
+    "        BasicTSPlusTrainer: Initialized training pipeline.\n",
+    "    \"\"\"\n",
+    "    dataloader = DataLoader(train_data, batch_size=64, shuffle=True)\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=10, gamma=0.7)\n",
+    "    \n",
+    "    trainer = BasicTSPlusTrainer(model, dataloader, optimizer, criterion, scheduler)\n",
+    "    return trainer\n",
+    "\n",
+    "print(\"BasicTS+ Benchmark: Unified Training Pipeline initialized successfully.\")\n"
+   ]
   }
  ],
  "metadata": {
