tsa-fianl-code-5

--- a/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
+++ b/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
@@ -477,6 +477,197 @@
     "\n",
     "print(\"BasicTS+ Benchmark: Unified Training Pipeline initialized successfully.\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34a55fcd",
+   "metadata": {},
+   "source": [
+    "Temporal and Spatial Heterogeneity Analysis (Including methods to categorize datasets and calculate r1 and r2 metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0e21fc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HeterogeneityAnalyzer:\n",
+    "    \"\"\"\n",
+    "    Analyze temporal and spatial heterogeneity in MTS datasets.\n",
+    "\n",
+    "    Args:\n",
+    "        data (numpy.ndarray): Time series dataset (shape: [samples, variables]).\n",
+    "        seq_length (int): Length of historical sequence.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, data, seq_length, upper_threshold=0.7, lower_threshold=0.1):\n",
+    "        if data is None or data.shape[0] < seq_length:\n",
+    "            raise ValueError(\"Dataset must contain sufficient time steps.\")\n",
+    "\n",
+    "        self.data = data\n",
+    "        self.seq_length = seq_length\n",
+    "        self.upper_threshold = upper_threshold\n",
+    "        self.lower_threshold = lower_threshold\n",
+    "\n",
+    "    def compute_similarity_matrices(self):\n",
+    "        \"\"\"\n",
+    "        Compute historical similarity (AP) and future similarity (AF) matrices.\n",
+    "\n",
+    "        Returns:\n",
+    "            tuple: Historical similarity matrix (AP), Future similarity matrix (AF).\n",
+    "        \"\"\"\n",
+    "        num_samples, num_vars = self.data.shape\n",
+    "        sample_count = num_samples - self.seq_length\n",
+    "\n",
+    "        X_hist = np.array([self.data[i:i+self.seq_length] for i in range(sample_count)])\n",
+    "        X_future = np.array([self.data[i+self.seq_length] for i in range(sample_count)])\n",
+    "\n",
+    "        AP = np.array([[np.dot(X_hist[i].flatten(), X_hist[j].flatten()) /\n",
+    "                        (np.linalg.norm(X_hist[i].flatten()) * np.linalg.norm(X_hist[j].flatten()))\n",
+    "                        for j in range(sample_count)] for i in range(sample_count)])\n",
+    "\n",
+    "        AF = np.array([[np.dot(X_future[i], X_future[j]) /\n",
+    "                        (np.linalg.norm(X_future[i]) * np.linalg.norm(X_future[j]))\n",
+    "                        for j in range(sample_count)] for i in range(sample_count)])\n",
+    "\n",
+    "        return AP, AF\n",
+    "\n",
+    "    def analyze_similarity_distribution(self, matrix, title):\n",
+    "        \"\"\"\n",
+    "        Analyze the distribution of similarity scores in AP/AF matrices.\n",
+    "\n",
+    "        Args:\n",
+    "            matrix (numpy.ndarray): Similarity matrix.\n",
+    "            title (str): Title for visualization.\n",
+    "        \"\"\"\n",
+    "        plt.figure(figsize=(8, 5))\n",
+    "        sns.histplot(matrix.flatten(), bins=50, kde=True)\n",
+    "        plt.title(f\"Distribution of Similarity Scores - {title}\")\n",
+    "        plt.xlabel(\"Similarity Score\")\n",
+    "        plt.ylabel(\"Frequency\")\n",
+    "        plt.show()\n",
+    "\n",
+    "        print(f\"{title} - Min: {np.min(matrix)}, Max: {np.max(matrix)}, Mean: {np.mean(matrix)}, Std: {np.std(matrix)}\")\n",
+    "\n",
+    "    def compute_dynamic_thresholds(self, matrix):\n",
+    "        \"\"\"\n",
+    "        Compute dataset-adaptive thresholds using percentiles.\n",
+    "\n",
+    "        Args:\n",
+    "            matrix (numpy.ndarray): Similarity matrix.\n",
+    "\n",
+    "        Returns:\n",
+    "            tuple: Dynamic upper and lower thresholds.\n",
+    "        \"\"\"\n",
+    "        upper = np.percentile(matrix, 90)  # Top 10% most similar samples\n",
+    "        lower = np.percentile(matrix, 10)  # Bottom 10% least similar samples\n",
+    "        return upper, lower\n",
+    "\n",
+    "    def compute_r1_r2_metrics(self):\n",
+    "        \"\"\"\n",
+    "        Compute r1 and r2 metrics for spatial indistinguishability analysis.\n",
+    "\n",
+    "        Returns:\n",
+    "            tuple: r1 and r2 values.\n",
+    "        \"\"\"\n",
+    "        AP, AF = self.compute_similarity_matrices()\n",
+    "\n",
+    "        # Analyze the distribution of similarity matrices\n",
+    "        self.analyze_similarity_distribution(AP, \"Historical (AP)\")\n",
+    "        self.analyze_similarity_distribution(AF, \"Future (AF)\")\n",
+    "\n",
+    "        # Compute dynamic thresholds\n",
+    "        dyn_upper_threshold, dyn_lower_threshold = self.compute_dynamic_thresholds(AP)\n",
+    "        print(f\"Dynamic Upper Threshold: {dyn_upper_threshold:.4f}, Dynamic Lower Threshold: {dyn_lower_threshold:.4f}\")\n",
+    "\n",
+    "        total_samples = AP.shape[0] * AP.shape[1]\n",
+    "        similar_hist_count = np.sum(AP > dyn_upper_threshold)\n",
+    "        indistinguishable_count = np.sum((AP > dyn_upper_threshold) & (AF < dyn_lower_threshold))\n",
+    "\n",
+    "        # Prevent division by zero errors\n",
+    "        r1 = indistinguishable_count / total_samples if total_samples != 0 else 0\n",
+    "        r2 = indistinguishable_count / similar_hist_count if similar_hist_count != 0 else 0\n",
+    "\n",
+    "        return r1, r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d07cfc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualization Functions\n",
+    "def visualize_temporal_patterns(dataset, method=\"tsne\"):\n",
+    "    \"\"\"\n",
+    "    Visualize temporal patterns in datasets using t-SNE or KDE.\n",
+    "    \n",
+    "    Args:\n",
+    "        dataset (numpy.ndarray): Time series dataset.\n",
+    "        method (str): Visualization method (\"tsne\" or \"kde\").\n",
+    "    \"\"\"\n",
+    "    if method == \"tsne\":\n",
+    "        tsne = TSNE(n_components=2, random_state=42)\n",
+    "        transformed_data = tsne.fit_transform(dataset)\n",
+    "        plt.scatter(transformed_data[:, 0], transformed_data[:, 1], alpha=0.6)\n",
+    "        plt.title(\"t-SNE Visualization of Temporal Patterns\")\n",
+    "        plt.xlabel(\"Dimension 1\")\n",
+    "        plt.ylabel(\"Dimension 2\")\n",
+    "        plt.show()\n",
+    "\n",
+    "    elif method == \"kde\":\n",
+    "        density = gaussian_kde(dataset.flatten())\n",
+    "        x_vals = np.linspace(np.min(dataset), np.max(dataset), 100)\n",
+    "        plt.plot(x_vals, density(x_vals))\n",
+    "        plt.title(\"Kernel Density Estimation of Temporal Patterns\")\n",
+    "        plt.xlabel(\"Time Series Values\")\n",
+    "        plt.ylabel(\"Density\")\n",
+    "        plt.show()\n",
+    "\n",
+    "    else:\n",
+    "        raise ValueError(\"Unsupported visualization method. Choose 'tsne' or 'kde'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f113dde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualization Functions\n",
+    "def visualize_temporal_patterns(dataset, method=\"tsne\"):\n",
+    "    \"\"\"\n",
+    "    Visualize temporal patterns in datasets using t-SNE or KDE.\n",
+    "    \n",
+    "    Args:\n",
+    "        dataset (numpy.ndarray): Time series dataset.\n",
+    "        method (str): Visualization method (\"tsne\" or \"kde\").\n",
+    "    \"\"\"\n",
+    "    if method == \"tsne\":\n",
+    "        tsne = TSNE(n_components=2, random_state=42)\n",
+    "        transformed_data = tsne.fit_transform(dataset)\n",
+    "        plt.scatter(transformed_data[:, 0], transformed_data[:, 1], alpha=0.6)\n",
+    "        plt.title(\"t-SNE Visualization of Temporal Patterns\")\n",
+    "        plt.xlabel(\"Dimension 1\")\n",
+    "        plt.ylabel(\"Dimension 2\")\n",
+    "        plt.show()\n",
+    "\n",
+    "    elif method == \"kde\":\n",
+    "        density = gaussian_kde(dataset.flatten())\n",
+    "        x_vals = np.linspace(np.min(dataset), np.max(dataset), 100)\n",
+    "        plt.plot(x_vals, density(x_vals))\n",
+    "        plt.title(\"Kernel Density Estimation of Temporal Patterns\")\n",
+    "        plt.xlabel(\"Time Series Values\")\n",
+    "        plt.ylabel(\"Density\")\n",
+    "        plt.show()\n",
+    "\n",
+    "    else:\n",
+    "        raise ValueError(\"Unsupported visualization method. Choose 'tsne' or 'kde'.\")"
+   ]
   }
  ],
  "metadata": {
