tsa-final-code-6

--- a/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
+++ b/time series analyst/final/Exploring Progress in Multivariate Time Series.ipynb
@@ -668,6 +668,144 @@
     "    else:\n",
     "        raise ValueError(\"Unsupported visualization method. Choose 'tsne' or 'kde'.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52d95992",
+   "metadata": {},
+   "source": [
+    "# Transformer Model Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ad43185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TimeSeriesTransformer(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Transformer-based Model for Multivariate Time Series Forecasting.\n",
+    "\n",
+    "    Args:\n",
+    "        input_dim (int): Number of input features.\n",
+    "        model_dim (int): Dimension of the Transformer embeddings.\n",
+    "        num_heads (int): Number of attention heads.\n",
+    "        num_layers (int): Number of Transformer encoder layers.\n",
+    "        hidden_dim (int): Dimension of hidden layers in feed-forward network.\n",
+    "        dropout (float): Dropout rate.\n",
+    "        batch_first (bool): Whether the batch dimension comes first in input tensors.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, input_dim, model_dim=128, num_heads=8, num_layers=4, hidden_dim=256, dropout=0.1, batch_first=True):\n",
+    "        super(TimeSeriesTransformer, self).__init__()\n",
+    "\n",
+    "        # Input embedding layer\n",
+    "        self.input_projection = nn.Linear(input_dim, model_dim)\n",
+    "\n",
+    "        # Positional Encoding to preserve temporal dependencies\n",
+    "        self.positional_encoding = PositionalEncoding(model_dim)\n",
+    "\n",
+    "        # Transformer Encoder Layers (Explicit batch_first=True)\n",
+    "        encoder_layers = nn.TransformerEncoderLayer(d_model=model_dim, nhead=num_heads, \n",
+    "                                                    dim_feedforward=hidden_dim, dropout=dropout, batch_first=batch_first)\n",
+    "        self.transformer_encoder = nn.TransformerEncoder(encoder_layers, num_layers=num_layers)\n",
+    "\n",
+    "        # Output projection\n",
+    "        self.output_layer = nn.Linear(model_dim, input_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward pass through the Transformer model.\n",
+    "\n",
+    "        Args:\n",
+    "            x (torch.Tensor): Input time series tensor (shape: [batch_size, seq_length, input_dim]).\n",
+    "        \n",
+    "        Returns:\n",
+    "            torch.Tensor: Forecasted values (shape: [batch_size, pred_length, input_dim]).\n",
+    "        \"\"\"\n",
+    "        x = self.input_projection(x)  # Project input into model dimension\n",
+    "        x = self.positional_encoding(x)  # Add positional encoding\n",
+    "        x = self.transformer_encoder(x)  # Pass through Transformer encoder\n",
+    "        x = self.output_layer(x)  # Map back to original feature dimension\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee025b2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionalEncoding(nn.Module):\n",
+    "    \"\"\"\n",
+    "    Implements Positional Encoding for preserving sequence order in Transformer.\n",
+    "    \n",
+    "    Args:\n",
+    "        model_dim (int): Dimension of the Transformer model.\n",
+    "        max_seq_length (int): Maximum expected sequence length.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, model_dim, max_seq_length=5000):\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "        pe = torch.zeros(max_seq_length, model_dim)\n",
+    "        position = torch.arange(0, max_seq_length, dtype=torch.float).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, model_dim, 2).float() * (-torch.log(torch.tensor(10000.0)) / model_dim))\n",
+    "        \n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "        self.pe = pe.unsqueeze(0)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Adds positional encoding to input tensor.\n",
+    "\n",
+    "        Args:\n",
+    "            x (torch.Tensor): Input tensor of shape [batch_size, seq_length, model_dim].\n",
+    "        \n",
+    "        Returns:\n",
+    "            torch.Tensor: Positional encoding applied tensor.\n",
+    "        \"\"\"\n",
+    "        return x + self.pe[:, :x.size(1)].to(x.device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "839e3b0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model Initialization Example\n",
+    "input_dim = 10  # Example: Number of features in time series\n",
+    "model = TimeSeriesTransformer(input_dim=input_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c03f7e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Confirm model setup\n",
+    "print(f\"TimeSeriesTransformer initialized with {sum(p.numel() for p in model.parameters())} parameters.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4efafd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for CUDA support\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "print(f\"Model moved to {device}.\")"
+   ]
   }
  ],
  "metadata": {
